[package]
name = "scrapcovid"
version = "0.1.0"
authors = ["abumuhammad <me.abumuhammad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
actix-http = "1.0.1"
actix-service = "1.0.5"
futures = "0.3.5"

dotenv = "0.15.0"
config = "0.10.1"

slog = "2.5.2"
slog-term = "2.6.0"
slog-async = "2.5.0"
slog-envlogger = "2.2.0"

reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }

scraper = "0.12.0"
select = "*"
prettytable-rs = "*"

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = "1.0.56"